<resources>
    <string name="app_name">chatWithWebSocket</string>
    <string name="blank_fragment">(⊙o⊙)\n你暂时没有好友哟，赶快行动起来吧!</string>
    <string name="test_str">消息内容消息内容消息内容消息内容消息内容消息内容消息内容</string>
    <string name="name">姓名</string>
    <string name="time">09:32</string>
    <string name="message">消息</string>
    <string name="address_list">联系人</string>
    <string name="search">搜索</string>
    <string name="password_label">密码</string>
    <string name="login_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="personal_info">个人</string>
    <string name="group_message">群通知</string>
    <string name="friend_new">新朋友</string>
    <string name="back">&lt; 返回</string>
    <string name="more_action">● ● ●</string>
    <string name="send">发送</string>
    <string name="enter_next"><![CDATA[>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friend">好友</string>
    <string name="group">群聊</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">登录失败</string>
    <string name="cancel">取消</string>
    <string name="friend_application">好友申请</string>
    <string name="agree">同意</string>
    <string name="group_application">群申请</string>
    <string name="phone">电话</string>
    <string name="age">年龄</string>
    <string name="location">地址</string>
    <string name="email">邮箱</string>
    <string name="introduce">介绍</string>
    <string name="gender">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="personal">个人中心</string>
    <string name="group_leader">群主</string>
    <string name="group_member">群成员</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="send_message">发送消息</string>
    <string name="quit_group">退出群聊</string>
    <string name="join_group">加入群聊</string>
    <string name="kick_out_group">踢出群聊</string>
    <string name="make_friend">加好友</string>
    <string name="delete_friend">删除好友</string>
    <string name="login_username">账号/手机号</string>
    <string name="application">申请加入：</string>
    <string name="information">资料</string>
    <string name="out">退出</string>
    <string name="login_success">登录成功</string>
    <string name="sign_success">注册成功</string>
    <string name="sign_failed">注册失败</string>
    <string name="invalid_phone">请使用手机号</string>
    <string name="find_person">查找人</string>
    <string name="find_group">查找群</string>
    <string name="create">创建</string>
    <string name="personal_infomation">个人信息</string>

</resources>