<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_200"
        android:orientation="vertical"
        tools:context=".fragment.AddressFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_main"
            android:background="@color/blue_400"
            android:gravity="center"
            android:text="@string/address_list"
            android:textColor="@color/gray_200"
            android:textSize="@dimen/font_navigation"
            tools:ignore="TextContrastCheck" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/nav_main"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginHorizontal="@dimen/content_padding"
                    android:layout_marginTop="@dimen/content_padding"
                    app:cardBackgroundColor="@color/gray_50"
                    app:cardCornerRadius="18dp">

                    <TextView
                        android:id="@+id/searchButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/search"
                        android:textColor="@color/gray_500"
                        android:textSize="@dimen/font_title" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/friendApplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:background="@color/gray_50"
                    android:orientation="horizontal"
                    android:padding="@dimen/content_padding">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:text="@string/friend_new"
                        android:textColor="@color/gray_900"
                        android:textSize="@dimen/font_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/enter_next"
                        android:textColor="@color/gray_500"
                        android:textSize="@dimen/font_title" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_padding"
                    android:background="@color/gray_200" />

                <LinearLayout
                    android:id="@+id/groupApplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/content_padding"
                    android:background="@color/gray_50"
                    android:orientation="horizontal"
                    android:padding="@dimen/content_padding">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:text="@string/group_message"
                        android:textColor="@color/gray_900"
                        android:textSize="@dimen/font_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/enter_next"
                        android:textColor="@color/gray_500"
                        android:textSize="@dimen/font_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_50"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:padding="@dimen/content_padding">

                    <TextView
                        android:id="@+id/friendList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/content_padding"
                        android:text="@string/friend"
                        android:textColor="@color/gray_800"
                        android:textSize="@dimen/font_title" />

                    <TextView
                        android:id="@+id/groupList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group"
                        android:textColor="@color/gray_500"
                        android:textSize="@dimen/font_content" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_padding"
                    android:background="@color/gray_200" />

                <fragment
                    android:id="@+id/addressListFragment"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:defaultNavHost="false"
                    app:navGraph="@navigation/nav_graph_address" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>