<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="personalViewModel"
            type="com.wangyou.chatwithwebsocket.data.PersonalViewModel" />
        <import type="com.wangyou.chatwithwebsocket.R"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray_200"
        tools:context=".fragment.PersonalFragment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?colorPrimary"
            android:gravity="center"
            android:text="@string/personal"
            android:textColor="@color/gray_50"
            android:textSize="@dimen/font_navigation"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:orientation="horizontal"
            android:background="@color/gray_50"
            android:paddingVertical="@dimen/content_padding">

            <ImageView
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:layout_marginHorizontal="@dimen/content_padding"
                app:image='@{"/0/" + personalViewModel.personal.uid}'
                app:placeholder="@{R.mipmap.header}"
                tools:src="@mipmap/header" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/content_padding"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={personalViewModel.personal.realName}"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/font_person_name"
                    tools:text="@string/name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{"ID:"+personalViewModel.personal.username}'
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/font_navigation"
                    tools:text="ID:12345678901" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding"
            android:padding="@dimen/content_padding"
            android:background="@color/gray_50"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_title"
                android:textColor="@color/gray_800"
                android:text="@string/information"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_title"
                android:textColor="@color/gray_800"
                android:text="@string/enter_next"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding"
            android:padding="@dimen/content_padding"
            android:background="@color/gray_50"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_title"
                android:textColor="@color/gray_800"
                android:onClick="exit"
                android:text="@string/out"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_title"
                android:textColor="@color/gray_800"
                android:text="@string/enter_next"/>
        </LinearLayout>
    </LinearLayout>
</layout>